<resources>
    <string name="app_name">Јога</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_asana">Асана</string>
    <string name="nav_pranayama">Пранајама</string>
    <string name="nav_meditation">Медитација</string>
    <string name="nav_programs">Програми</string>
    <string name="nav_news">Вести</string>
    <string name="nav_settings">Прилагодувања</string>

    <string name="beginner">Почетни</string>
    <string name="intermediate">Средни</string>
    <string name="advanced">Напредни</string>
    <string name="asana_category">Категорија:</string>

    <string name="titleSadhana">Јога центар \nСадана</string>
    <string name="decriptionAboutSadhana">Јога центар САДАНА е основан на 13.08.2014 година. Во Центарот се одржуваат курсеви од различни стилови на јога - интегрална, јин, винјаса, аштанга, јога за бремени жени и јога за деца. Курсевите ги одржуваат едуцирани јога инструктори, сертифицирани во Садана и други реномирани школи.
    \n\nЈога центар Садана е сертифицирана школа за обука на нови инструктори по јога, од страна на Yoga Alliance International од Индија.
    \n\nОсновач на Јога центар Садана е Марија, сертифициран јога учител од страна на Yoga Alliance International од Индија (Certified Master Yoga Teacher 500 Hours). Марија е посветена на јогата од 2004 година,
        а од 2006 година ја започнува својата обука за јога инструктор. Одржува курсеви по Интегрална и Јин јога со групи или индивидуалци од различни нивоа. </string>
    <string name="alarm">Аларм</string>
    <string name="favorite">Омилени активности</string>
    <string name="share">Сподели</string>
    <string name="contact">Контакт</string>
    <string name="aboutUs">За нас</string>
    <string name="news_category">Category:</string>
    <string name="date_published">Date published:</string>
    <string name="text_error">Error</string>
    <string name="program_title">Програма</string>

    <string name="login">НАЈАВИ СЕ</string>
    <string name="username">корисничко име</string>
    <string name="email">е-пошта</string>
    <string name="password">лозинка</string>
    <string name="not_registered">Не си регистриран?</string>
    <string name="register">Регистрирај се</string>
    <string name="city">град</string>
    <string name="already_registered">Веќе си регистриран?</string>
    <string name="password_cnf">потврди лозинка</string>
    <string name="skip">прескокни</string>

    <string name="sett_reminder_header">Постави аларм</string>
    <string name="sett_reminder_label">Активирај аларм</string>
    <string name="sett_reminder_time_label">Избери време за јога</string>
    <string name="sett_reminder_time_content">08 : 00 PM</string>
    <string name="RemindMe">Време за јога</string>

    <string name="menu_refresh">refresh</string>
    <string name="setTheAlarm">Немате поставено аларм</string>
    <string name="openTimePicker">Постави аларм</string>
    <string name="cancelAlarm">Откажи аларм</string>
    <string name="addToFavorite">Додај во омилени</string>

</resources>
